<resources>

    <string name="app_name">Bukain</string>
    <string name="bl_service">BLService</string>
    <string name="font_family_medium">sans-serif-medium</string>

    <!--<string name="connection_error" formatted="false"></string>-->

    <string name="profile" formatted="false">Profile</string>
    <string name="auth_failed" formatted="false">Register firebase failed!</string>
    <string name="navigate_back_label" formatted="false">Navigate back</string>
    <string name="navigation_header_activity" formatted="false">Activity</string>
    <string name="stats_funded" formatted="false">funded</string>
    <string name="stats_backers" formatted="false">backers</string>
    <string name="stats_days" formatted="false">days to go</string>

    <string name="deadline_units_days" formatted="false">days</string>
    <string name="deadline_units_hours" formatted="false">hours</string>
    <string name="deadline_units_mins" formatted="false">mins</string>
    <string name="deadline_units_secs" formatted="false">secs</string>
    <string name="time_left_to_go" formatted="false">%{time_left} to go</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="login_placeholder_email" formatted="false">Email address</string>
    <string name="login_placeholder_password" formatted="false">Password</string>
    <string name="login_buttons_log_in" formatted="false">Log in</string>
    <string name="login_tout_buttons_log_in_with_facebook" formatted="false">Log in with Facebook</string>
    <string name="login_tout_buttons_log_in_with_google" formatted="false">Log in with Google</string>
    <string name="login_buttons_log_in_email" formatted="false">Log in with email</string>
    <string name="signup_button_email" formatted="false">Sign up with email</string>

    <string name="login_tout_disclaimer_by_signing_up_you_agree_to_terms_html" formatted="false">By signing up, you
        agree to our &lt;u>terms of use&lt;/u>, &lt;u>privacy policy&lt;/u>, and &lt;u>cookie policy&lt;/u>.
    </string>
    <string name="login_tout_disclaimer_we_never_post_anything_without_permission" formatted="false">We\'ll never post
        anything without your permission.
    </string>
    <string name="profile_projects_created_projects" formatted="false">Created projects</string>
    <string name="profile_projects_backed_projects" formatted="false">Backed projects</string>
    <string name="profile_projects_reputation" formatted="false">Reputations</string>

    <string name="project_back_button" formatted="false">Back this project</string>
    <string name="project_manage_button" formatted="false">Manage pledge</string>
    <string name="project_view_button" formatted="false">View pledge</string>

    <string name="project_menu_created_by" formatted="false">Created by</string>
    <string name="project_menu_buttons_campaign" formatted="false">Campaign</string>
    <string name="project_menu_buttons_updates" formatted="false">Updates</string>
    <string name="project_menu_buttons_comments" formatted="false">Comments</string>

    <string name="project_creator_youre_a_backer" formatted="false">\u0020• You\'re a backer</string>
    <string name="backer_icon">backer</string>
    <string name="discovery_baseball_card_accessibility_category_label" formatted="false">Category</string>
    <string name="discovery_baseball_card_accessibility_location_label" formatted="false">Location</string>
    <string name="discovery_baseball_card_stats_backers" formatted="false">backers</string>

    <string name="products_selected_label_you_selected" formatted="false">You selected</string>
    <string name="products_info_includes" formatted="false">Includes</string>
    <string name="products_info_all_gone" formatted="false">All gone</string>
    <string name="products_info_shipping" formatted="false">Shipping</string>
    <string name="products_info_estimated_delivery" formatted="false">Estimated delivery</string>

    <string name="accessibility_projects_buttons_play_video" formatted="false">Play video</string>

    <string name="local_offer_icon">\ue54e</string>
    <string name="location_on_icon">\ue0c8</string>
    <string name="chevron_right_icon">\ue5cc</string>
    <string name="play_arrow">\ue037</string>
</resources>
