<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    tools:showIn="@layout/project_card_view">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/project_backers_count"
            style="@style/CaptionPrimaryMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="12,000" />

        <TextView
            style="@style/CaptionSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stats_backers" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/grid_4"
        android:layout_marginStart="@dimen/grid_4"
        android:orientation="vertical">

        <TextView
            android:id="@+id/project_funded"
            style="@style/CaptionPrimaryMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="85%" />

        <TextView
            style="@style/CaptionSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stats_funded" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/project_deadline"
            style="@style/CaptionPrimaryMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            tools:text="5" />

        <TextView
            android:id="@+id/deadline_countdown_unit"
            style="@style/CaptionSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/stats_days" />

    </LinearLayout>

</LinearLayout>
